refactor: drop location header and add partner id route requirement
